# dummy-poetry-repo

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---everything-else.md  ---feature-request.md
.github/workflows/: main.yml  release.yml
tests/: test_dummy_poetry_repo.py
